#Add: fix day12 algorithm