@@ -1,9 +1,6 @@
 package com.jckang.intro.day12;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 public class ArraySlicer {
     public static void main(String[] args) {
@@ -16,29 +13,37 @@ public class ArraySlicer {
         int[] query = {4, 1, 2};
         int[] expect = {1, 2, 3};
         int[] result = solution(arr, query);
+        System.out.println(Arrays.toString(result));
         System.out.println(Arrays.equals(expect, result));
+
+        int[] arr2 = {4, 4, 4, 4, 4};
+        int[] query2 = {4, 4};
+        int[] expect2 = {4};
+        int[] result2 = solution(arr2, query2);
+        System.out.println(Arrays.toString(result2));
+        System.out.println(Arrays.equals(expect2, result2));
 
     }
 
     private static int[] solution(int[] arr, int[] query) {
         List<Integer> list = Arrays.stream(arr)
                 .boxed()
-                .collect(Collectors.toList());
-        for(int i = 0; i < query.length; i++) {
-            if(i % 2 == 0) {
-                for(int j = 0; j < list.size() - query[i]; j++) {
-                    list.remove(list.size() - 1);
+                .toList();
+        Deque<Integer> deque = new LinkedList<>(list);
+        for (int i = 0; i < query.length; i++) {
+            int index = deque.size();
+            if (i % 2 == 0) {
+                for (int j = 1; j < index - query[i]; j++) {
+                    deque.pollLast();
                 }
             } else {
-                for(int j = 0; j < query[i]; j++) {
-                    list.remove(0);
+                for (int j = 0; j < query[i]; j++) {
+                    deque.pollFirst();
                 }
             }
         }
-        return list.stream().mapToInt(Integer::intValue).toArray();
-        /*for(int i = 0; i < list.size(); i++) {
-            System.out.println(list.get(i));
-        }
-        return null;*/
+        return deque.stream()
+                .mapToInt(Integer::intValue)
+                .toArray();
     }
 }
